// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Link /> should render <a> tag by default 1`] = `
<a
  class="StyledLink-sc-1s1vukk-0 iFcNFw"
>
  children
</a>
`;

exports[`<Link /> should render correctly with custom props 1`] = `
<a
  class="StyledLink-sc-1s1vukk-0 YlyvO"
>
  children
</a>
`;

exports[`<Link /> should render correctly with default props 1`] = `
<a
  class="StyledLink-sc-1s1vukk-0 iFcNFw"
>
  children
</a>
`;

exports[`<Link /> should render render <button> tag 1`] = `
<button
  class="StyledLink-sc-1s1vukk-0 iFcNFw"
>
  children
</button>
`;
